# function-health-reference

./: .gitignore  README.md  autoimmunity_panel.md  biomarker_confounds_reference.md  blood_cbc_indices.md  effect_sizes_INDEX.md  effect_sizes_cardiovascular.md  effect_sizes_endocrine.md  effect_sizes_hematology_other.md  effect_sizes_metabolic_liver.md  effect_sizes_nutrients.md  heart_lipids_advanced.md  heart_lipids_basic.md  heavy_metals_and_biological_age.md  hormones_male_panel.md  immune_cbc_differential.md  kidney_electrolytes_pancreas.md  liver_panel.md  metabolic_panel.md  nutrients_omega_fatty_acids.md  nutrients_vitamins_minerals.md  prostate_psa.md  thyroid_panel.md  urinalysis_panel.md
etl/: .gitignore  app.py  extraction_spec.md  personal_labs.py  pyproject.toml
etl/data/effects/: added_sugar_reduction_25g__non_hdl_c.yaml  added_sugar_reduction_25g__shbg.yaml  added_sugar_reduction_25g__urine_bilirubin.yaml  added_sweeteners_30g__triglycerides.yaml  adenosylcobalamin_oral_1000mcg__mma.yaml  aerobic_zone2_150min_wk__albumin_globulin_ratio.yaml  aerobic_zone2_150min_wk__alp.yaml  (+2056 more)
etl/fhetl/: cli.py  schemas.py  solver.py  validator.py
etl/scripts/: audit_coverage.py  consolidate.py  generate_intervention_canonical.py  generate_marker_refs.py  intervention_aliases.yaml  reconcile.py
etl/tests/: test_consolidate.py  test_corpus_integration.py  test_effect_schema.py  test_generate_intervention_canonical.py  test_intervention_schema.py  test_marker_schema.py  test_solver.py  test_solver_v2.py  test_solver_v3.py  test_validator.py
(+666 files in other folders)
