[project]
name = "fh-etl"
version = "0.1.0"
description = "ETL + validator for Function Health biomarker intervention research"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "pulp>=2.8",
    "streamlit>=1.57.0",
    "pandas>=3.0.2",
    "matplotlib>=3.10.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
